# AiMemo

./: .gitignore  AGENTS.md  AIMEMO_GUIDE.md  APPLE_LOGIN_SETUP.md  AUTH_SETUP.md  GCLOUD_CLOUDSHELL_GUIDE.md  GOOGLE_LOGIN_SETUP.md  QUICKSTART.md  README.md  environment.yml
ai_requests/: ai_client_factory.py
aimemo-legacy/ai_requests/: model_manager.py
aimemo-legacy/app/: App.tsx  app.config.ts  package-lock.json  package.json
aimemo-legacy/backend/: README.md
aimemo-legacy/scripts/: run-mac-simulator.sh
android/: README.md  gradlew  gradlew.bat  settings.gradle.kts
app/: app.config.ts  package-lock.json  package.json  tsconfig.json
backend/: .env.example  README.md  pyproject.toml
backend/src/aimemo/: __init__.py  app.py  auth.py  config.py  db.py  models.py
backend/src/aimemo/handlers/: __init__.py  auth.py  base.py  health.py  me.py
backend/src/aisecondary/: app.py  config.py
backend/src/aisecondary/handlers/: __init__.py  base.py
backend/src/aisecondary/services/: __init__.py
backend/src/aisecondary/storage/: database.py
backend/src/aisecretary/: app.py  models.py
backend/src/aisecretary/handlers/: __init__.py  auth.py  base.py  health.py
backend/src/aisecretary/services/: auth.py  email.py
backend/src/aisecretary/storage/: __init__.py
backend/src/aisecretary_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: CNAME  index.html  mac-ios-simulator.md  mobile-setup.md  pwa-to-mobile-roadmap.md  styles.css
ios/: README.md  project.yml
pwa/: app.js  config.example.js  index.html  manifest.json  styles.css
references/: current-environment-inventory.md  run-notes.md
scripts/: dev-session.sh  load-env.sh  push-and-sync-mac.sh
(+39 files in other folders)
