[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisecretary-backend"
version = "0.1.0"
description = "Backend API for the AISecretary email and calendar assistant."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Lachlan Chen"}
]
dependencies = [
    "tornado>=6.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1.0",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.4.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "types-python-dotenv",
    "types-psycopg2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]
